--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/builds.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/builds.data.br",
-        frameworkUrl: buildUrl + "/builds.framework.js.br",
-        codeUrl: buildUrl + "/builds.wasm.br",
+        dataUrl: buildUrl + "/builds.data.gz",
+        frameworkUrl: buildUrl + "/builds.framework.js.gz",
+        codeUrl: buildUrl + "/builds.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Gamebion",
         productName: "Era of Valor",
