--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       var loaderUrl = buildUrl + "/EraOfValorBuild.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/EraOfValorBuild.data.br",
-        frameworkUrl: buildUrl + "/EraOfValorBuild.framework.js.br",
-        codeUrl: buildUrl + "/EraOfValorBuild.wasm.br",
+        dataUrl: buildUrl + "/EraOfValorBuild.data",
+        frameworkUrl: buildUrl + "/EraOfValorBuild.framework.js",
+        codeUrl: buildUrl + "/EraOfValorBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Gamebion",
         productName: "unity_eraofvalor",
-        productVersion: "1.0",
+        productVersion: "1.0.1",
         showBanner: unityShowBanner,
       };
 
