--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/20064005edb32c56ec68b4113956ebfc.loader.js";
+      var loaderUrl = buildUrl + "/09042a1cfaa3cc870420d23125d76598.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/7e250367b9c559185fb84ae00e1b4a9e.data",
-        frameworkUrl: buildUrl + "/873374a9874c68b464ce6f2c37375a73.framework.js",
-        codeUrl: buildUrl + "/d283ad297194142df5d18f47c39ac66a.wasm",
+        dataUrl: buildUrl + "/9fbb1513f1285267499b1fd80af77c6c.data",
+        frameworkUrl: buildUrl + "/96f8b3e4ed80aa64d9bf8b790ff4090e.framework.js",
+        codeUrl: buildUrl + "/54f2109ba4bcbedcb93f40cf16f53d08.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Gamebion",
         productName: "Era of Valor",
@@ -124,12 +124,6 @@
 
     </script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script>
-        function initTelegramSDK() {
-            Telegram.WebApp.expand();
-            Telegram.WebApp.ready();
-        }
-        window.onload = initTelegramSDK;
-    </script>
+    <script src="/index.js"></script>
   </body>
 </html>
