--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       var loaderUrl = buildUrl + "/09042a1cfaa3cc870420d23125d76598.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/9fbb1513f1285267499b1fd80af77c6c.data",
+        dataUrl: buildUrl + "/d45def86a95dae8cf84df21e1c2d509e.data",
         frameworkUrl: buildUrl + "/96f8b3e4ed80aa64d9bf8b790ff4090e.framework.js",
         codeUrl: buildUrl + "/54f2109ba4bcbedcb93f40cf16f53d08.wasm",
         streamingAssetsUrl: "StreamingAssets",
@@ -124,6 +124,6 @@
 
     </script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
