connect wallet button

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/194a12b8000749a3597bca9f12b76d8f.loader.js";
+      var loaderUrl = buildUrl + "/92d324d58f5156a9be5fbe15f7ef44ec.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/dca63122243c27bc3096ab7ad94fb6d2.data",
-        frameworkUrl: buildUrl + "/1af9215ed66c3f174791e30467436d50.framework.js",
-        codeUrl: buildUrl + "/369ff864c1780666661fa3582cec453f.wasm",
+        dataUrl: buildUrl + "/7a070dcc8b3837d46b7a79fc59cecae4.data",
+        frameworkUrl: buildUrl + "/915f2514e9e6febd360b0f65ddae0dec.framework.js",
+        codeUrl: buildUrl + "/4cf7cdf7003e52437d5f14bab5908568.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Gamebion",
         productName: "Era of Valor",
@@ -131,6 +131,7 @@
 
     </script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
