--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/cd9988d9759b3d50a8f6bc7215cfa37e.loader.js";
+      var loaderUrl = buildUrl + "/ebf15407d7dec7a843a963247715589b.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/8fc80f949168920cf374e5ab4fb4ba81.data",
+        dataUrl: buildUrl + "/8e126bfcb1ce9ec4d345a4ccf0c98f92.data",
         frameworkUrl: buildUrl + "/254d1f2c5636064418b3ebe47fa4d009.framework.js",
-        codeUrl: buildUrl + "/8dcab6bd6d54a65f23bd1ebf34ea4ca5.wasm",
+        codeUrl: buildUrl + "/00b2afa2256b2af983d4388c86bf14ce.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Gamebion",
         productName: "Era of Valor",
@@ -109,7 +109,9 @@
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
           document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
+        }).then((unityInstance) => {
+                window.unityInstance = unityInstance;
+
                 document.querySelector("#unity-loading-bar").style.display = "none";
                 document.querySelector("#unity-fullscreen-button").onclick = () => {
                   unityInstance.SetFullscreen(1);
