--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       var loaderUrl = buildUrl + "/ebf15407d7dec7a843a963247715589b.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/8e126bfcb1ce9ec4d345a4ccf0c98f92.data",
+        dataUrl: buildUrl + "/f9a4369abfcd7d1b7ab9ede5e7ab7fd6.data",
         frameworkUrl: buildUrl + "/254d1f2c5636064418b3ebe47fa4d009.framework.js",
         codeUrl: buildUrl + "/00b2afa2256b2af983d4388c86bf14ce.wasm",
         streamingAssetsUrl: "StreamingAssets",
@@ -121,8 +121,8 @@
                 // const user = Telegram.WebApp.initDataUnsafe.user;
                 // const json = JSON.stringify(user);
                 // console.log("json data", json);
-                const json = '{"id":472016797,"first_name":"Даниил","last_name":"","username":"pandrodo","language_code":"en","allows_write_to_pm":true,"photo_url":"https://t.me/i/userpic/320/lrUfeYc8dwdfS1cqt0jBKQHpu5HTXgaydKUu4K6sIKY.svg"}';
-                unityInstance.SendMessage("SelectCharacterScreen", "OnTelegramUser", json);
+                //const json = '{"id":472016797,"first_name":"Даниил","last_name":"","username":"pandrodo","language_code":"en","allows_write_to_pm":true,"photo_url":"https://t.me/i/userpic/320/lrUfeYc8dwdfS1cqt0jBKQHpu5HTXgaydKUu4K6sIKY.svg"}';
+                //unityInstance.SendMessage("SelectCharacterScreen", "OnTelegramUser", json);
 
               }).catch((message) => {
                 alert(message);
