--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       var loaderUrl = buildUrl + "/851de2850787d8db542d1d066857a6e6.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/547b840d162097ee4d133280f7351f5b.data",
+        dataUrl: buildUrl + "/7f0ff8f66dff4cb381303db89ac7dc96.data",
         frameworkUrl: buildUrl + "/b054b2d5d5e4091b5c676113c2da12d6.framework.js",
         codeUrl: buildUrl + "/0a7b4c2006654cc3141c159fcb25126b.wasm",
         streamingAssetsUrl: "StreamingAssets",
@@ -112,9 +112,12 @@
         }).then((unityInstance) => {
                 window.unityInstance = unityInstance;
 
+                const mockData = "query_id=AAHqU7dAAAAAAM8G0efO3LNg&user=%7B%22id%22%3A123456789%2C%22first_name%22%3A%22Daniil%22%2C%22username%22%3A%22pandrodo%22%2C%22language_code%22%3A%22en%22%7D&auth_date=1718025300&hash=5fcd2c1a0e0fbb8e3ecf1a9a90e0e8ed394d58e1ed1474ac5a9e3e3d65bbd9d0";
+                const initData = Telegram.WebApp.initData ?? mockData;
+
                 if (Telegram?.WebApp?.initData) {
-                  console.log("send data from unity init");
-                  window.unityInstance.SendMessage("TelegramBridge", "OnTelegramReady", mockData);
+                  console.log("send data from unity init", initData);
+                  window.unityInstance.SendMessage("TelegramBridge", "OnTelegramReady", initData);
                 }
 
                 document.querySelector("#unity-loading-bar").style.display = "none";
